# TailoredSketch

./: .gitignore  CM_Sketch.h  CU_Sketch.h  C_Sketch.h  Choose_Ske.h  CountLess.h  MurmurHash.h  O_Tailored.h  README.md  Sketch.h  StingyC.h  StingyCM.h  StingyCM_Base.h  StingyCM_Sample.h  StingyCU.h  StingyCU_Base.h  Tailored.h  main.cpp  params.h
src/: CMakeLists.txt  Choose_Ske.h  MurmurHash.h  main.cpp  params.h
src/Sketch/: CM_Sketch.h  CU_Sketch.h  C_Sketch.h  CountLess.h  O_Tailored.h  Sketch.h  StingyC.h  StingyCM.h  StingyCM_Base.h  StingyCM_Sample.h  StingyCU.h  StingyCU_Base.h  Tailored.h
